--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -76,7 +76,7 @@
         flex-direction: column;
         align-items: center;
         height: max-content;
-        margin-top: 1rem;
+        margin-top: 0.8rem;
         .page-title {
             font-family: 'Raleway', sans-serif;
             font-weight: 600;
@@ -120,7 +120,7 @@
                     justify-content: center;
                     align-items: center;
                     margin-bottom: 0.75rem;
-                    font-size: 1.15rem;
+                    font-size: 1.1rem;
                     font-weight: 600;
                     text-transform: uppercase;
                     .underline-navigation {
@@ -134,7 +134,7 @@
                     color: white;
                     background-color: #f24e4e;
                     font-weight: 500;
-                    font-size: 1.15rem;
+                    font-size: 1.1rem;
                     border-radius: 1.625rem;
                     height: 2.2rem;
                     display: flex;
@@ -205,12 +205,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 1050px;
+    height: 1125px;
     .page-title-grouping {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 1rem;
+        margin-top: 0.8rem;
         margin-bottom: 1em;
         .page-title {
             font-family: 'Raleway', sans-serif;
@@ -237,7 +237,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            height: 215px;
+            height: 240px;
             width: 90%;
             max-width: 350px;
             border-radius: 12px;
@@ -249,9 +249,9 @@
             justify-content: flex-end;
             .project-languages {
                 font-size: 0.8rem;
+                font-weight: 500;
                 color: #F24E4E;
-
-                height: 10%;
+                height: 8%;
             }   
             .project-title-front {
                 position: relative;
@@ -263,25 +263,45 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 10%;
+                height: 8%;
             }
             .project-image-front {
                 position: relative;
-                height: 80%;
+                height: 68%;
                 width: auto;
                 max-width: 100%;
             }
-            .expand-icon-container {
+            .learn-more-button-container {
+                position: relative;
+                height: 16%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .learn-more-button {
+                    color: white;
+                    background-color: #f24e4e;
+                    font-weight: 500;
+                    border-radius: 1.625rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 80%;
+                    padding-top: 0.15rem;
+                    padding-bottom: 0.15rem;
+                    padding-left: 0.8rem;
+                    padding-right: 0.8rem;
+                }
+            }
+            .expand-image-icon-container {
                 position: absolute;
+                width: 100%;
+                top: 0;
                 display: flex;
                 justify-content: flex-end;
-                width: 100%;
-                padding: 0.5rem;
-                top: 0;
-                .expand-icon-project-card {
+                .expand-image-icon {
                     font-size: 2rem;
-                    z-index: 1;
-
+                    margin: 0.5rem;
+                    z-index: 1000;
                 }
             }
         }
@@ -292,13 +312,30 @@
             .project-information-container {
                 overflow-y: scroll;
                 width: 95%;
-                height: 100%;  
+                height: 100%;
+                padding-top: 1rem;
                 .project-information-text {
-                    padding-top: 1rem;
+                    overflow-y: scroll;
                     padding-bottom: 1rem;
-                    padding-left: 2rem;
-                    padding-right: 2rem;
+                    padding-left: 2.5rem;
+                    padding-right: 2.5rem;
                     text-align: unset;
+                }
+            }
+            .flip-back-button-container {
+                position: absolute;
+                width: 100%;
+                top: 0;
+                display: flex;
+                justify-content: flex-end;
+                .flip-back-button {
+                    border-radius: 50%;
+                    color: white;
+                    background-color: #f24e4e;
+                    padding: 0.2rem;
+                    font-size: 2.2rem;
+                    margin: 0.5rem;
+                    z-index: 1000;
                 }
             }
         }
@@ -340,3 +377,4 @@
         border-radius: 12px;
     }
 }
+
