--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -1,4 +1,36 @@
-.intro-page {
+.App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media all and (min-width: 480px) {
+  .App {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 30%, 70%;
+        grid-template-columns: 30%, 70%;
+    -ms-grid-rows: 100vh max-content;
+        grid-template-rows: 100vh -webkit-max-content;
+        grid-template-rows: 100vh max-content;
+        grid-template-areas: "intro intro" "about projects";
+  }
+}
+
+.App .intro-page {
   position: relative;
   background-color: #252934;
   width: 100%;
@@ -6,7 +38,13 @@
   z-index: 9999;
 }
 
-.intro-page .intro-container {
+@media all and (min-width: 480px) {
+  .App .intro-page {
+    grid-area: intro;
+  }
+}
+
+.App .intro-page .intro-container {
   position: absolute;
   top: 15%;
   bottom: 0%;
@@ -14,7 +52,7 @@
   right: 10%;
 }
 
-.intro-page .intro-container .profile-paragraph {
+.App .intro-page .intro-container .profile-paragraph {
   font-family: 'Raleway', sans-serif;
   margin-top: 8rem;
   line-height: 120%;
@@ -23,18 +61,18 @@
   text-align: left;
 }
 
-.intro-page .intro-container .profile-paragraph .my-name {
+.App .intro-page .intro-container .profile-paragraph .my-name {
   color: #f24e4e;
 }
 
-.intro-page .intro-container .intro-button-container {
+.App .intro-page .intro-container .intro-button-container {
   position: absolute;
   bottom: 0%;
   width: 100%;
   margin-bottom: 5rem;
 }
 
-.intro-page .intro-container .intro-button-container .intro-button {
+.App .intro-page .intro-container .intro-button-container .intro-button {
   position: relative;
   font-family: 'Raleway', sans-serif;
   display: -webkit-inline-box;
@@ -59,13 +97,13 @@
   cursor: pointer;
 }
 
-.intro-page .intro-container .intro-button-container .intro-button .intro-button-text {
+.App .intro-page .intro-container .intro-button-container .intro-button .intro-button-text {
   color: #BFC0C0;
   text-decoration: none;
   letter-spacing: 1px;
 }
 
-.page-1 {
+.App .page-1 {
   position: relative;
   background-color: #fff;
   width: 100%;
@@ -85,7 +123,13 @@
   height: max-content;
 }
 
-.page-1 .page-title-grouping {
+@media all and (min-width: 480px) {
+  .App .page-1 {
+    grid-area: about;
+  }
+}
+
+.App .page-1 .page-title-grouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -102,7 +146,7 @@
   margin-top: 0.8rem;
 }
 
-.page-1 .page-title-grouping .page-title {
+.App .page-1 .page-title-grouping .page-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -110,13 +154,13 @@
   color: #252934;
 }
 
-.page-1 .page-title-grouping .underline-page-title {
+.App .page-1 .page-title-grouping .underline-page-title {
   background: #252934;
   height: 4px;
   width: 70px;
 }
 
-.page-1 .top-container-page-1 {
+.App .page-1 .top-container-page-1 {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -131,7 +175,7 @@
   max-width: 370px;
 }
 
-.page-1 .top-container-page-1 .top-left-container-page-1 {
+.App .page-1 .top-container-page-1 .top-left-container-page-1 {
   width: 30%;
   max-width: 150px;
   margin-right: 4%;
@@ -147,14 +191,14 @@
           justify-content: flex-start;
 }
 
-.page-1 .top-container-page-1 .top-left-container-page-1 .my-photo {
+.App .page-1 .top-container-page-1 .top-left-container-page-1 .my-photo {
   width: 100%;
   border-radius: 50%;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
-.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container {
+.App .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container {
   margin-top: 1rem;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
@@ -162,7 +206,7 @@
   padding: 7.5%;
 }
 
-.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping {
+.App .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -182,13 +226,13 @@
   text-transform: uppercase;
 }
 
-.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping .underline-navigation {
+.App .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping .underline-navigation {
   background: #252934;
   height: 2px;
   width: 60px;
 }
 
-.page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-button {
+.App .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-button {
   margin-top: 0.5rem;
   color: white;
   background-color: #f24e4e;
@@ -209,7 +253,7 @@
   padding-bottom: 0.15rem;
 }
 
-.page-1 .top-container-page-1 .top-right-container-page-1 {
+.App .page-1 .top-container-page-1 .top-right-container-page-1 {
   width: 70%;
   height: -webkit-max-content;
   height: -moz-max-content;
@@ -226,14 +270,14 @@
   font-size: 2rem;
 }
 
-.page-1 .top-container-page-1 .top-right-container-page-1 .quotation-marks {
+.App .page-1 .top-container-page-1 .top-right-container-page-1 .quotation-marks {
   white-space: nowrap;
   color: #f24e4e;
   font-size: 1.6rem;
   font-weight: 900;
 }
 
-.page-1 .middle-container-page-1 {
+.App .page-1 .middle-container-page-1 {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -242,12 +286,13 @@
       -ms-flex-pack: center;
           justify-content: center;
   height: 225px;
+  width: 100%;
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
   padding-top: 1rem;
 }
 
-.page-1 .middle-container-page-1 .swipe-card {
+.App .page-1 .middle-container-page-1 .swipe-card {
   background-color: #ffffff;
   position: absolute;
   height: 100%;
@@ -268,7 +313,7 @@
           align-items: center;
 }
 
-.page-1 .middle-container-page-1 .swipe-card .swipe-card-image {
+.App .page-1 .middle-container-page-1 .swipe-card .swipe-card-image {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -277,12 +322,12 @@
   width: 90%;
 }
 
-.page-1 .middle-container-page-1 .swipe-card .swipe-card-title {
+.App .page-1 .middle-container-page-1 .swipe-card .swipe-card-title {
   font-size: 1.1rem;
   font-weight: 500;
 }
 
-.page-2 {
+.App .page-2 {
   position: relative;
   background-color: #fff;
   width: 100%;
@@ -299,7 +344,13 @@
   height: 1125px;
 }
 
-.page-2 .page-title-grouping {
+@media all and (min-width: 480px) {
+  .App .page-2 {
+    grid-area: projects;
+  }
+}
+
+.App .page-2 .page-title-grouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -314,7 +365,7 @@
   margin-bottom: 1em;
 }
 
-.page-2 .page-title-grouping .page-title {
+.App .page-2 .page-title-grouping .page-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -322,13 +373,13 @@
   color: #252934;
 }
 
-.page-2 .page-title-grouping .underline-page-title {
+.App .page-2 .page-title-grouping .underline-page-title {
   background: #252934;
   height: 4px;
   width: 70px;
 }
 
-.page-2 .project-card-page-2 {
+.App .page-2 .project-card-page-2 {
   position: relative;
   width: 100%;
   padding: 0.8rem;
@@ -343,7 +394,7 @@
           justify-content: center;
 }
 
-.page-2 .project-card-page-2 .c {
+.App .page-2 .project-card-page-2 .c {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -363,7 +414,7 @@
           box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
 }
 
-.page-2 .project-card-page-2 .projects-container-front {
+.App .page-2 .project-card-page-2 .projects-container-front {
   position: absolute;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -373,14 +424,14 @@
           justify-content: flex-end;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .project-languages {
+.App .page-2 .project-card-page-2 .projects-container-front .project-languages {
   font-size: 0.8rem;
   font-weight: 500;
   color: #F24E4E;
   height: 8%;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .project-title-front {
+.App .page-2 .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
   color: #252934;
   font-size: 1rem;
@@ -399,14 +450,14 @@
   height: 8%;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .project-image-front {
+.App .page-2 .project-card-page-2 .projects-container-front .project-image-front {
   position: relative;
   height: 68%;
   width: auto;
   max-width: 100%;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .learn-more-button-container {
+.App .page-2 .project-card-page-2 .projects-container-front .learn-more-button-container {
   position: relative;
   height: 16%;
   display: -webkit-box;
@@ -420,7 +471,7 @@
           align-items: center;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .learn-more-button-container .learn-more-button {
+.App .page-2 .project-card-page-2 .projects-container-front .learn-more-button-container .learn-more-button {
   color: white;
   background-color: #f24e4e;
   font-weight: 500;
@@ -441,7 +492,7 @@
   padding-right: 0.8rem;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .expand-image-icon-container {
+.App .page-2 .project-card-page-2 .projects-container-front .expand-image-icon-container {
   position: absolute;
   width: 100%;
   top: 0;
@@ -453,13 +504,13 @@
           justify-content: flex-end;
 }
 
-.page-2 .project-card-page-2 .projects-container-front .expand-image-icon-container .expand-image-icon {
+.App .page-2 .project-card-page-2 .projects-container-front .expand-image-icon-container .expand-image-icon {
   font-size: 2rem;
   margin: 0.5rem;
   z-index: 1000;
 }
 
-.page-2 .project-card-page-2 .projects-container-back {
+.App .page-2 .project-card-page-2 .projects-container-back {
   position: relative;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -469,22 +520,21 @@
           align-items: center;
 }
 
-.page-2 .project-card-page-2 .projects-container-back .project-information-container {
+.App .page-2 .project-card-page-2 .projects-container-back .project-information-container {
   overflow-y: scroll;
   width: 95%;
   height: 100%;
   padding-top: 1rem;
 }
 
-.page-2 .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
+.App .page-2 .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
   overflow-y: scroll;
   padding-bottom: 1rem;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-  text-align: unset;
 }
 
-.page-2 .project-card-page-2 .projects-container-back .flip-back-button-container {
+.App .page-2 .project-card-page-2 .projects-container-back .flip-back-button-container {
   position: absolute;
   width: 100%;
   top: 0;
@@ -496,7 +546,7 @@
           justify-content: flex-end;
 }
 
-.page-2 .project-card-page-2 .projects-container-back .flip-back-button-container .flip-back-button {
+.App .page-2 .project-card-page-2 .projects-container-back .flip-back-button-container .flip-back-button {
   border-radius: 50%;
   color: white;
   background-color: #f24e4e;
@@ -506,7 +556,7 @@
   z-index: 1000;
 }
 
-.page-3 {
+.App .page-3 {
   position: relative;
   background-color: #252934;
   display: -webkit-box;
@@ -519,9 +569,16 @@
   width: 100%;
   height: 40vh;
   overflow: hidden;
+  border: solid;
 }
 
-.page-3 .page-title-grouping {
+@media all and (min-width: 480px) {
+  .App .page-3 {
+    display: none;
+  }
+}
+
+.App .page-3 .page-title-grouping {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -536,7 +593,7 @@
   margin-bottom: 0.5em;
 }
 
-.page-3 .page-title-grouping .page-title {
+.App .page-3 .page-title-grouping .page-title {
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 2rem;
@@ -544,13 +601,13 @@
   color: #ffffff;
 }
 
-.page-3 .page-title-grouping .underline-page-title {
+.App .page-3 .page-title-grouping .underline-page-title {
   background: #ffffff;
   height: 4px;
   width: 70px;
 }
 
-.page-3 .social-icons-container {
+.App .page-3 .social-icons-container {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
