--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -21,11 +21,7 @@
   .App {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 30%, 70%;
-        grid-template-columns: 30%, 70%;
-    -ms-grid-rows: 100vh max-content;
-        grid-template-rows: 100vh -webkit-max-content;
-        grid-template-rows: 100vh max-content;
+    grid: 100vh 100vh / 30% 70%;
         grid-template-areas: "intro intro" "about projects";
   }
 }
@@ -126,6 +122,7 @@
 @media all and (min-width: 480px) {
   .App .page-1 {
     grid-area: about;
+    height: 100%;
   }
 }
 
@@ -204,6 +201,12 @@
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   padding: 7.5%;
+}
+
+@media all and (min-width: 480px) {
+  .App .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container {
+    display: none;
+  }
 }
 
 .App .page-1 .top-container-page-1 .top-left-container-page-1 .navigation-button-container .navigation-container-title-grouping {
@@ -341,12 +344,15 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 1125px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 @media all and (min-width: 480px) {
   .App .page-2 {
     grid-area: projects;
+    height: 100%;
   }
 }
 
@@ -379,7 +385,26 @@
   width: 70px;
 }
 
-.App .page-2 .project-card-page-2 {
+.App .page-2 .project-card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media all and (min-width: 480px) and (orientation: landscape) {
+  .App .page-2 .project-card-container {
+    display: -ms-grid;
+    display: grid;
+    grid: 1fr 1fr 1fr 1fr / 50% 50%;
+    overflow-y: scroll;
+  }
+}
+
+.App .page-2 .project-card-container .project-card-page-2 {
   position: relative;
   width: 100%;
   padding: 0.8rem;
@@ -394,7 +419,7 @@
           justify-content: center;
 }
 
-.App .page-2 .project-card-page-2 .c {
+.App .page-2 .project-card-container .project-card-page-2 .c {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -414,7 +439,7 @@
           box-shadow: 4px 7px 13px 3px rgba(0, 0, 0, 0.1);
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front {
   position: absolute;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -424,14 +449,14 @@
           justify-content: flex-end;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .project-languages {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .project-languages {
   font-size: 0.8rem;
   font-weight: 500;
   color: #F24E4E;
   height: 8%;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .project-title-front {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .project-title-front {
   position: relative;
   color: #252934;
   font-size: 1rem;
@@ -450,14 +475,14 @@
   height: 8%;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .project-image-front {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .project-image-front {
   position: relative;
   height: 68%;
   width: auto;
   max-width: 100%;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .learn-more-button-container {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .learn-more-button-container {
   position: relative;
   height: 16%;
   display: -webkit-box;
@@ -471,7 +496,7 @@
           align-items: center;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .learn-more-button-container .learn-more-button {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .learn-more-button-container .learn-more-button {
   color: white;
   background-color: #f24e4e;
   font-weight: 500;
@@ -492,7 +517,7 @@
   padding-right: 0.8rem;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .expand-image-icon-container {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .expand-image-icon-container {
   position: absolute;
   width: 100%;
   top: 0;
@@ -504,13 +529,13 @@
           justify-content: flex-end;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-front .expand-image-icon-container .expand-image-icon {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-front .expand-image-icon-container .expand-image-icon {
   font-size: 2rem;
   margin: 0.5rem;
   z-index: 1000;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-back {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-back {
   position: relative;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -520,21 +545,21 @@
           align-items: center;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-back .project-information-container {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-back .project-information-container {
   overflow-y: scroll;
   width: 95%;
   height: 100%;
   padding-top: 1rem;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-back .project-information-container .project-information-text {
   overflow-y: scroll;
   padding-bottom: 1rem;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-back .flip-back-button-container {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-back .flip-back-button-container {
   position: absolute;
   width: 100%;
   top: 0;
@@ -546,7 +571,7 @@
           justify-content: flex-end;
 }
 
-.App .page-2 .project-card-page-2 .projects-container-back .flip-back-button-container .flip-back-button {
+.App .page-2 .project-card-container .project-card-page-2 .projects-container-back .flip-back-button-container .flip-back-button {
   border-radius: 50%;
   color: white;
   background-color: #f24e4e;
@@ -569,7 +594,6 @@
   width: 100%;
   height: 40vh;
   overflow: hidden;
-  border: solid;
 }
 
 @media all and (min-width: 480px) {
