--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -23,13 +23,10 @@
     user-select: none;
     @media all and (min-width: 480px) {
         display: grid;
-        grid-template-columns: 30%, 70%;
-        grid-template-rows: 100vh max-content;
+        grid:  100vh 100vh / 30% 70%;
         grid-template-areas: 
             "intro intro"
-            "about projects"
-        ;
-
+            "about projects";
     }
     .intro-page {
         position: relative;
@@ -99,6 +96,7 @@
         height: max-content;
         @media all and (min-width: 480px) {
             grid-area: about;
+            height: 100%;
         }
         .page-title-grouping {
             display: flex;
@@ -143,6 +141,9 @@
                     box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
                     border-radius: 12px;
                     padding: 7.5%;
+                    @media all and (min-width: 480px) {
+                        display: none;
+                    }
                     .navigation-container-title-grouping {
                         display: flex;
                         flex-direction: column;
@@ -235,9 +236,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 1125px;
+        height: max-content;
         @media all and (min-width: 480px) {
             grid-area: projects;
+            height: 100%;
         }
         .page-title-grouping {
             display: flex;
@@ -258,119 +260,128 @@
                 width: 70px;
             }
         }
-        .project-card-page-2 {
-            position: relative;
-            width: 100%;
-            padding: 0.8rem;
+        .project-card-container {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            .c {
-                position: relative;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                height: 240px;
-                width: 90%;
-                max-width: 350px;
-                border-radius: 12px;
-                box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
+            flex-direction: column;
+            @media all and (min-width: 480px) and (orientation: landscape) {
+                display: grid;
+                grid:  1fr 1fr 1fr 1fr / 50% 50%;
+                overflow-y: scroll;
             }
-            .projects-container-front {
-                position: absolute;
+            .project-card-page-2 {
+                position: relative;
+                width: 100%;
+                padding: 0.8rem;
+                display: flex;
                 align-items: center;
-                justify-content: flex-end;
-                .project-languages {
-                    font-size: 0.8rem;
-                    font-weight: 500;
-                    color: #F24E4E;
-                    height: 8%;
-                }   
-                .project-title-front {
+                justify-content: center;
+                .c {
                     position: relative;
-                    color: #252934;
-                    font-size: fontSize(projectTitleFront);
-                    font-weight: fontWeight(projectTitleFront);
-                    text-transform: uppercase;
-                    width: 100%;
                     display: flex;
+                    flex-direction: column;
                     justify-content: center;
-                    align-items: center;
-                    height: 8%;
+                    height: 240px;
+                    width: 90%;
+                    max-width: 350px;
+                    border-radius: 12px;
+                    box-shadow: 4px 7px 13px 3px rgba(0, 0, 0,0.1);
                 }
-                .project-image-front {
-                    position: relative;
-                    height: 68%;
-                    width: auto;
-                    max-width: 100%;
-                }
-                .learn-more-button-container {
-                    position: relative;
-                    height: 16%;
-                    display: flex;
-                    justify-content: center;
+                .projects-container-front {
+                    position: absolute;
                     align-items: center;
-                    .learn-more-button {
-                        color: white;
-                        background-color: #f24e4e;
+                    justify-content: flex-end;
+                    .project-languages {
+                        font-size: 0.8rem;
                         font-weight: 500;
-                        border-radius: 1.625rem;
+                        color: #F24E4E;
+                        height: 8%;
+                    }   
+                    .project-title-front {
+                        position: relative;
+                        color: #252934;
+                        font-size: fontSize(projectTitleFront);
+                        font-weight: fontWeight(projectTitleFront);
+                        text-transform: uppercase;
+                        width: 100%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        height: 80%;
-                        padding-top: 0.15rem;
-                        padding-bottom: 0.15rem;
-                        padding-left: 0.8rem;
-                        padding-right: 0.8rem;
+                        height: 8%;
+                    }
+                    .project-image-front {
+                        position: relative;
+                        height: 68%;
+                        width: auto;
+                        max-width: 100%;
+                    }
+                    .learn-more-button-container {
+                        position: relative;
+                        height: 16%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        .learn-more-button {
+                            color: white;
+                            background-color: #f24e4e;
+                            font-weight: 500;
+                            border-radius: 1.625rem;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            height: 80%;
+                            padding-top: 0.15rem;
+                            padding-bottom: 0.15rem;
+                            padding-left: 0.8rem;
+                            padding-right: 0.8rem;
+                        }
+                    }
+                    .expand-image-icon-container {
+                        position: absolute;
+                        width: 100%;
+                        top: 0;
+                        display: flex;
+                        justify-content: flex-end;
+                        .expand-image-icon {
+                            font-size: 2rem;
+                            margin: 0.5rem;
+                            z-index: 1000;
+                        }
                     }
                 }
-                .expand-image-icon-container {
-                    position: absolute;
-                    width: 100%;
-                    top: 0;
-                    display: flex;
-                    justify-content: flex-end;
-                    .expand-image-icon {
-                        font-size: 2rem;
-                        margin: 0.5rem;
-                        z-index: 1000;
-                    }
-                }
-            }
-            .projects-container-back {
-                position: relative;
-                justify-content: start;
-                align-items: center;
-                .project-information-container {
-                    overflow-y: scroll;
-                    width: 95%;
-                    height: 100%;
-                    padding-top: 1rem;
-                    .project-information-text {
+                .projects-container-back {
+                    position: relative;
+                    justify-content: start;
+                    align-items: center;
+                    .project-information-container {
                         overflow-y: scroll;
-                        padding-bottom: 1rem;
-                        padding-left: 2.5rem;
-                        padding-right: 2.5rem;
+                        width: 95%;
+                        height: 100%;
+                        padding-top: 1rem;
+                        .project-information-text {
+                            overflow-y: scroll;
+                            padding-bottom: 1rem;
+                            padding-left: 2.5rem;
+                            padding-right: 2.5rem;
+                        }
+                    }
+                    .flip-back-button-container {
+                        position: absolute;
+                        width: 100%;
+                        top: 0;
+                        display: flex;
+                        justify-content: flex-end;
+                        .flip-back-button {
+                            border-radius: 50%;
+                            color: white;
+                            background-color: #f24e4e;
+                            padding: 0.2rem;
+                            font-size: 2.2rem;
+                            margin: 0.5rem;
+                            z-index: 1000;
+                        }
                     }
                 }
-                .flip-back-button-container {
-                    position: absolute;
-                    width: 100%;
-                    top: 0;
-                    display: flex;
-                    justify-content: flex-end;
-                    .flip-back-button {
-                        border-radius: 50%;
-                        color: white;
-                        background-color: #f24e4e;
-                        padding: 0.2rem;
-                        font-size: 2.2rem;
-                        margin: 0.5rem;
-                        z-index: 1000;
-                    }
-                }
-            }
+            }   
         }
     }
     .page-3 {
@@ -381,7 +392,6 @@
         width: 100%;
         height: 40vh;
         overflow: hidden;
-        border: solid;
         @media all and (min-width: 480px) {
             display: none;
         }
